re PR rtl-optimization/10171 (wrong code for inlined function)

PR optimization/10171
        * unroll.c (unroll_loop): Don't delete the jump at the end unless
        we also delete a jump at the beginning.

From-SVN: r64861