gcc/unroll.c
@@ -302,9 +302,11 @@ unroll_loop (loop, insn_count, strength_reduce_p)
 	 jump to the loop condition.  Make sure to delete the jump
 	 insn, otherwise the loop body will never execute.  */
 
+      /* FIXME this actually checks for a jump to the continue point, which
+	 is not the same as the condition in a for loop.  As a result, this
+	 optimization fails for most for loops.  We should really use flow
+	 information rather than instruction pattern matching.  */
       rtx ujump = ujump_to_loop_cont (loop->start, loop->cont);
-      if (ujump)
-	delete_related_insns (ujump);
 
       /* If number of iterations is exactly 1, then eliminate the compare and
 	 branch at the end of the loop since they will never be taken.
@@ -316,9 +318,10 @@ unroll_loop (loop, insn_count, strength_reduce_p)
       if (GET_CODE (last_loop_insn) == BARRIER)
 	{
 	  /* Delete the jump insn.  This will delete the barrier also.  */
-	  delete_related_insns (PREV_INSN (last_loop_insn));
+	  last_loop_insn = PREV_INSN (last_loop_insn);
 	}
-      else if (GET_CODE (last_loop_insn) == JUMP_INSN)
+
+      if (ujump && GET_CODE (last_loop_insn) == JUMP_INSN)
 	{
 #ifdef HAVE_cc0
 	  rtx prev = PREV_INSN (last_loop_insn);
@@ -330,24 +333,27 @@ unroll_loop (loop, insn_count, strength_reduce_p)
 	  if (only_sets_cc0_p (prev))
 	    delete_related_insns (prev);
 #endif
+
+	  delete_related_insns (ujump);
+
+	  /* Remove the loop notes since this is no longer a loop.  */
+	  if (loop->vtop)
+	    delete_related_insns (loop->vtop);
+	  if (loop->cont)
+	    delete_related_insns (loop->cont);
+	  if (loop_start)
+	    delete_related_insns (loop_start);
+	  if (loop_end)
+	    delete_related_insns (loop_end);
+
+	  return;
 	}
-
-      /* Remove the loop notes since this is no longer a loop.  */
-      if (loop->vtop)
-	delete_related_insns (loop->vtop);
-      if (loop->cont)
-	delete_related_insns (loop->cont);
-      if (loop_start)
-	delete_related_insns (loop_start);
-      if (loop_end)
-	delete_related_insns (loop_end);
-
-      return;
     }
-  else if (loop_info->n_iterations > 0
-	   /* Avoid overflow in the next expression.  */
-	   && loop_info->n_iterations < (unsigned) MAX_UNROLLED_INSNS
-	   && loop_info->n_iterations * insn_count < (unsigned) MAX_UNROLLED_INSNS)
+
+  if (loop_info->n_iterations > 0
+      /* Avoid overflow in the next expression.  */
+      && loop_info->n_iterations < (unsigned) MAX_UNROLLED_INSNS
+      && loop_info->n_iterations * insn_count < (unsigned) MAX_UNROLLED_INSNS)
     {
       unroll_number = loop_info->n_iterations;
       unroll_type = UNROLL_COMPLETELY;
